# moody_animals

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/shaders/: blit.frag  blit.vert
assets/words/: animals.txt  moods.txt
src/: dyn_words.rs  main.rs
src/glx/: error.rs  font.rs  mod.rs  objects.rs  program.rs  types.rs
