[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"] 
description = """
Simple OpenGL bitmap font demo.
""" 
edition = "2018" 
homepage = "https://github.com/shampoofactory/moody_animals" 
keywords = ["bmfont", "bitmap", "font", "demo"] 
license = "MIT OR Apache-2.0" 
name = "moody_animals" 
readme = "README.md" 
repository = "https://github.com/shampoofactory/moody_animals" 
version = "0.1.0" # remember to update lzfooand READMEs

[dependencies]
bmfont_rs = "0.1.0"
clap = "2.33.3"
gl = "0.14.0"
image = "0.23.14"
rand = "0.8.4"
sdl2 = "0.34.5"
